--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ keywords    = ["address", "mac", "hw", "network"]
 phf = "0.7"
 
 [build-dependencies]
-reqwest     = "0.9"
-url         = "1.4"
-regex       = "1.0"
-phf_codegen = "0.7"
+reqwest     = {version = "0.9", optional = true}
+url         = {version = "1.4", optional = true}
+regex       = {version = "1.0", optional = true}
+phf_codegen = {version = "0.7", optional = true}
 
 [features]
-database = []
+database = ["reqwest", "url", "regex", "phf_codegen"]
