--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,11 @@ keywords    = ["address", "mac", "hw", "network"]
 phf = "0.8"
 
 [build-dependencies]
-smol        = "0.1"
-smol-potat  = { version = "0.3", features = ["auto"] }
-reqwest     = "0.10"
-url         = "2"
-regex       = "1"
-phf_codegen = "0.8"
+smol        = { version = "1.0", optional = true }
+reqwest     = { version = "0.10", optional = true }
+url         = { version = "2", optional = true }
+regex       = { version = "1", optional = true }
+phf_codegen = { version = "0.8", optional = true }
 
 [features]
-database = []
+database = ["smol", "reqwest", "url", "regex", "phf_codegen"]
